...
                    </LinearLayout>

                </com.google.android.material.appbar.MaterialToolbar>

                <!-- RecyclerView for photo grid -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewGallery"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:clipToPadding="false"
                    android:padding="8dp"
                    android:scrollbars="vertical"
                    android:visibility="gone"
...
